# wally-vendor

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  rokit.toml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  lockfile.rs  main.rs  utils.rs
src/commands/: mod.rs  sync.rs  sync_vendor.rs
tests/example/: wally-vendor.toml  wally.toml
tests/extreme-example/: wally.toml
