[package]
name = "wally-vendor"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Vendor and verify Wally dependencies for .rbxm releases"
repository = "https://github.com/SequesteredOne/wally-vendor"
readme = "README.md"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"]}
just = "1.43.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
walkdir = "2.5.0"
