[package]
name = "wally-vendor"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Vendor and verify Wally dependencies for .rbxm releases"
repository = "https://github.com/SequesteredOne/wally-vendor"
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"]}
hyperfine = "1.19.0"
just = "1.43.0"
rayon = "1.11.0"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
walkdir = "2.5.0"
