[package]
name = "wally-vendor"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A fast and simple utility for vendoring Wally-installed dependencies"
repository = "https://github.com/SequesteredOne/wally-vendor"
readme = "README.md"
keywords = ["wally", "roblox", "vendor", "cli"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"]}
rayon = "1.11.0"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
walkdir = "2.5.0"
